// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Cdk8sComponent Custom Configuration should use custom k8s version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.32.0
"
`;

exports[`Cdk8sComponent Custom Configuration should use custom k8s version 2`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-32": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Custom Configuration should use custom paths and imports 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node k8s/app.ts
imports:
  - k8s@1.31.0
  - prometheus-operator@1.0.0
  - grafana@2.0.0
"
`;

exports[`Cdk8sComponent Custom Configuration should use custom paths and imports 2`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sComponent Custom Configuration should use custom paths and imports 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-31": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Default Configuration should add cdk8s component with default settings to CdkApp 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
"
`;

exports[`Cdk8sComponent Default Configuration should add cdk8s component with default settings to CdkApp 2`] = `
"import { App, Stack, StackProps } from 'aws-cdk-lib';
import { Construct } from 'constructs';

export class MyStack extends Stack {
  constructor(scope: Construct, id: string, props: StackProps = {}) {
    super(scope, id, props);

    // define resources here...
  }
}

// for development, use account/region from cdk cli
const devEnv = {
  account: process.env.CDK_DEFAULT_ACCOUNT,
  region: process.env.CDK_DEFAULT_REGION,
};

const app = new App();

new MyStack(app, 'test-cdk-app-dev', { env: devEnv });
// new MyStack(app, 'test-cdk-app-prod', { env: prodEnv });

app.synth();"
`;

exports[`Cdk8sComponent Default Configuration should add cdk8s component with default settings to CdkApp 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-30": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Default Configuration should create test file when used in cdk8s projects 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
"
`;

exports[`Cdk8sComponent File Generation should generate cdk8s.yaml with correct typescript configuration 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node apps/index.ts
imports:
  - k8s@1.31.0
  - istio@1.0.0
"
`;

exports[`Cdk8sComponent File Generation should generate sample files in correct locations 1`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sComponent Integration with Different Project Types should handle multiple imports correctly 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
  - prometheus-operator@1.0.0
  - cert-manager@2.0.0
  - istio@3.0.0
  - nginx-ingress@4.0.0
"
`;

exports[`Cdk8sComponent Integration with Different Project Types should work correctly with cdk-app with disabled sample code 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
"
`;

exports[`Cdk8sComponent Integration with Different Project Types should work correctly with cdk-app with disabled sample code 2`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sComponent Integration with NX Monorepo should add cdk8s nx commands to monorepo when single cdk8s subproject exists 1`] = `
{
  "description": "Run cdk8s command for all affected projects",
  "name": "cdk8s",
  "steps": [
    {
      "exec": "nx run-many --target=cdk8s --output-style=stream --nx-bail",
      "receiveArgs": true,
    },
  ],
}
`;

exports[`Cdk8sComponent Integration with NX Monorepo should add cdk8s nx commands to monorepo when single cdk8s subproject exists 2`] = `
{
  "description": "Import cdk8s charts for all affected projects",
  "name": "cdk8s:import",
  "steps": [
    {
      "exec": "nx run-many --target=cdk8s:import --output-style=stream --nx-bail",
      "receiveArgs": true,
    },
  ],
}
`;

exports[`Cdk8sComponent Integration with NX Monorepo should add cdk8s nx commands to monorepo when single cdk8s subproject exists 3`] = `
{
  "description": "Synthesize cdk8s constructs for all affected projects",
  "name": "cdk8s:synth",
  "steps": [
    {
      "exec": "nx run-many --target=cdk8s:synth --output-style=stream --nx-bail",
      "receiveArgs": true,
    },
  ],
}
`;

exports[`Cdk8sComponent Integration with NX Monorepo should not duplicate cdk8s nx commands when multiple cdk8s subprojects exist 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "env": {
    "PATH": "$(npx -c "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build for all affected projects",
      "name": "build",
      "steps": [
        {
          "exec": "nx run-many --target=build --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "bump": {
      "condition": "git log --oneline -1 | grep -qv "chore(release):"",
      "description": "Bumps version based on latest git tag and generates a changelog entry",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "bump",
      "steps": [
        {
          "builtin": "release/bump-version",
        },
      ],
    },
    "cdk8s": {
      "description": "Run cdk8s command for all affected projects",
      "name": "cdk8s",
      "steps": [
        {
          "exec": "nx run-many --target=cdk8s --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "cdk8s:import": {
      "description": "Import cdk8s charts for all affected projects",
      "name": "cdk8s:import",
      "steps": [
        {
          "exec": "nx run-many --target=cdk8s:import --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "cdk8s:synth": {
      "description": "Synthesize cdk8s constructs for all affected projects",
      "name": "cdk8s:synth",
      "steps": [
        {
          "exec": "nx run-many --target=cdk8s:synth --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "commit": {
      "description": "Commit changes with conventional commits prompts provided by Commitizen",
      "name": "commit",
      "steps": [
        {
          "exec": "./node_modules/cz-customizable/standalone.js",
          "receiveArgs": false,
          "say": "committing changes",
        },
      ],
    },
    "compile": {
      "description": "Only compile for all affected projects",
      "name": "compile",
      "steps": [
        {
          "exec": "nx run-many --target=compile --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "node .projenrc.js",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "eslint": {
      "description": "Run eslint for all affected projects",
      "name": "eslint",
      "steps": [
        {
          "exec": "nx run-many --target=eslint --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "graph": {
      "description": "Generate dependency graph",
      "name": "graph",
      "steps": [
        {
          "exec": "nx graph",
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "yarn install --check-files",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "yarn install --check-files --frozen-lockfile",
        },
        {
          "exec": "nx run-many --target=install:ci --output-style=stream --nx-bail",
        },
      ],
    },
    "nx": {
      "description": "Run Nx against multiple workspace projects",
      "name": "nx",
      "steps": [
        {
          "exec": "nx",
          "receiveArgs": true,
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package for all affected projects",
      "name": "package",
      "steps": [
        {
          "exec": "nx run-many --target=package --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "post-compile": {
      "description": "Run post-compile for all affected projects",
      "name": "post-compile",
      "steps": [
        {
          "exec": "nx run-many --target=post-compile --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Run pre-compile for all affected projects",
      "name": "pre-compile",
      "steps": [
        {
          "exec": "nx run-many --target=pre-compile --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "release": {
      "description": "Prepare a release from "main" branch",
      "env": {
        "RELEASE": "true",
      },
      "name": "release",
      "steps": [
        {
          "exec": "rm -fr dist",
        },
        {
          "spawn": "bump",
        },
        {
          "spawn": "build",
        },
        {
          "spawn": "unbump",
        },
        {
          "exec": "git diff --ignore-space-at-eol --exit-code",
        },
      ],
    },
    "run-many": {
      "description": "Run task against multiple workspace projects",
      "name": "run-many",
      "steps": [
        {
          "exec": "nx run-many",
          "receiveArgs": true,
        },
      ],
    },
    "test": {
      "description": "Only test for all affected projects",
      "name": "test",
      "steps": [
        {
          "exec": "nx run-many --target=test --output-style=stream --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "test:watch": {
      "description": "Only test for all affected projects",
      "name": "test:watch",
      "steps": [
        {
          "exec": "nx run-many --target=test:watch --output-style=stream --skip-nx-cache --nx-ignore-cycles --nx-bail",
          "receiveArgs": true,
        },
      ],
    },
    "unbump": {
      "description": "Restores version to 0.0.0",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "unbump",
      "steps": [
        {
          "builtin": "release/reset-version",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "npx npm-check-updates@18 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@nx/devkit,@nx/workspace,@types/jest,@types/node,commitizen,cz-customizable,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,jest,nx,prettier,projen,ts-jest,typescript",
        },
        {
          "exec": "yarn install --check-files",
        },
        {
          "exec": "yarn upgrade @nx/devkit @nx/workspace @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser commit-and-tag-version commitizen constructs cz-customizable eslint-config-prettier eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest jest-junit nx prettier projen ts-jest typescript",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
    "watch": {
      "description": "Watch & compile in the background",
      "name": "watch",
      "steps": [
        {
          "exec": "tsc --build -w",
        },
      ],
    },
  },
}
`;

exports[`Cdk8sComponent Task Configuration should create all required cdk8s tasks with default paths 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-30": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Task Configuration should create tasks with custom paths 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-30": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;
